hphp/test/quick/upper-bounds/prop-redefine-multi-ub.php.expectf
object(Sub1) (0) {
}

Catchable fatal error: Upper-bound string of Sub2::x has no equivalent upper-bound in Sup in %s/prop-redefine-multi-ub.php on line 19
